bridge/base/0-hiring-namespace.yaml
#! 0-hiring-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: hiring
    labels:
        com.docker.compose.project: hiring
