bridge/base/nextjs-app-2-service.yaml
#! nextjs-app-2-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: nextjs-app-2-published
    namespace: hiring
    labels:
        com.docker.compose.project: hiring
        com.docker.compose.service: nextjs-app-2
spec:
    selector:
        com.docker.compose.project: hiring
        com.docker.compose.service: nextjs-app-2
    ports:
        - name: nextjs-app-3002
          port: 3002
          protocol: TCP
          targetPort: nextjs-app-3000

# check if there is at least one published port
