bridge/base/nginx-service.yaml
#! nginx-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: nginx-published
    namespace: hiring
    labels:
        com.docker.compose.project: hiring
        com.docker.compose.service: nginx
spec:
    selector:
        com.docker.compose.project: hiring
        com.docker.compose.service: nginx
    ports:
        - name: nginx-80
          port: 80
          protocol: TCP
          targetPort: nginx-80
